add solution-detail page

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -283,7 +283,7 @@
 		<section class="media-section">
 			<div class="container">
 				<h2>медиацентр</h2>
-				<ul class="media-section__tabs tabs">
+				<ul class="tabs">
 					<li class="media-section__tab link tab active">
 						<a href="#tab-1">Все</a>
 					</li>
@@ -297,9 +297,9 @@
 						<a href="#tab-4"> Мероприятия</a>
 					</li>
 				</ul>
-				<div class="media-section__tab-content tab-content active" id="tab-1">
+				<div class="media-component tab-content active" id="tab-1">
 					<img src="@images/photographer.png">
-					<div class="media-section__list">
+					<div class="media-component__list">
 						<div class="news-card">
 							<div class="news-card__date">24 августа</div>
 							<h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
@@ -324,9 +324,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="media-section__tab-content tab-content" id="tab-2">
+				<div class="media-component tab-content" id="tab-2">
 					<img src="@images/building.png">
-					<div class="media-section__list">
+					<div class="media-component__list">
 						<div class="news-card">
 							<div class="news-card__date">24 августа</div>
 							<h3>В «Форт Диалоге» прошла первая профориентационная экскурсия</h3>
