--- a/src/html/pages/solution-detail.html
+++ b/src/html/pages/solution-detail.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | Детальная услуги'})
+@@include('meta/_head.html', {title: 'Форт Диаолог | Детальная решения'})
 
 <body>
   @@include('components/business/_header.html')
@@ -12,13 +12,13 @@
             <a href="/" class="link">Главная</a>
           </li>
           <li>
-            <a href="#" class="link">Услуги</a>
+            <a href="#" class="link">Решения</a>
           </li>
           <li>
-            Инжереные изыскания
+            Интеллектуальная транспортная система «Курсор»
           </li>
         </ul>
-        <h1>Инженерные изыскания</h1>
+        <h1>Интеллектуальная транспортная система «Курсор»</h1>
         <div class="btn btn_secondary btn_secondary_white">
           <span class="children">
             Оставить заявку
@@ -27,112 +27,91 @@
       </div>
     </section>
 
-    <section class="service-detail">
+    <section class="solution-detail">
       <div class="container">
-        <h2>
-          На сегодняшний день <span>АО «Форт Диалог»</span><br>
-          обладает достаточными техническими<br>
-          и людскими ресурсами<br>
-          и выполняет следующие виды изысканий:
-        </h2>
-        <p>Важной частью этапа проектирования являются инженерные изыскания.
-          Данный вид исследований позволяет нам получить полный спектр данных о районе предполагаемой застройки, на
-          основе которых, можно подготовить качественную проектную документацию в короткие сроки. Очень важно, чтобы
-          инженерные изыскания выполнялись ответственными, высококвалифицированными и опытными специалистами.</p>
+        <p class="solution-detail__description">Программное обеспечение «Интеллектуальная транспортная система «Курсор»
+          обеспечивает возможности контроля
+          состояния оборудования для балансодержателей и компаний, принявших на обслуживание/содержание комплексы
+          фото-видеофиксации нарушений ПДД (далее комплексов ФВФ)</p>
         <div class="enumeration accordion">
           <ul class="accordion__list">
             <li class="enumeration__item accordion__item">
               <div class="accordion__toggle">
-                <h3>Инженерно-геодезические</h3>
+                <h3>Основные функции системы:</h3>
                 <div class="accordion-icon"></div>
               </div>
               <ul class="list accordion__content">
-                <li>Создание опорных геодезических сетей</li>
-                <li>Геодезические наблюдения за деформациями и осадками зданий и сооружений, движениями земной
-                  поверхности
-                  и опасными природными процессами</li>
-                <li>Создание и обновление инженерно-топографических планов в масштабах 1:200 - 1:5000, в том числе в
-                  цифровой форме, съемка подземных коммуникаций и сооружений</li>
-                <li>Трассирование линейных объектов</li>
-                <li>Инженерно-гидрографические работы</li>
-                <li>Специальные геодезические и топографические работы при строительстве и реконструкции зданий и
-                  сооружений</li>
-              </ul>
-            </li>
-            <li class="enumeration__item accordion__item">
-              <div class="accordion__toggle">
-                <h3>Инженерно-экологические</h3>
-                <div class="accordion-icon"></div>
-              </div>
-              <ul class="list accordion__content">
-                <li>Инженерно-экологическая съемка территории</li>
-                <li>Исследования химического загрязнения почвогрунтов, поверхностных и подземных вод, атмосферного
-                  воздуха, источников загрязнения</li>
-                <li>Лабораторные химико-аналитические и газохимические исследования образцов и проб почвогрунтов и воды
+                <li>Вывод сводной информации о техническом состоянии комплексов ФВФ;</li>
+                <li>Отображение на интерактивной карте расположение каждого комплекса и вывод его состояния на карте;
                 </li>
-                <li>Исследования и оценка физических воздействий и радиационной обстановки иа территории</li>
-                <li>Изучение растительности, животного мира, санитарно-эпидемиологические и медико-биологические
-                  исследования территории*</li>
+                <li>Сбор и вывод технических параметров комплексов ФВФ;</li>
+                <li>Расчет интенсивности трафика на основе собранных данным о зафиксированных транспортных средствах и
+                  количестве зафиксированных нарушений ПДД;</li>
+                <li>Поиск на комплексах ФВФ фотоматериалов по заданному номерному знаку.</li>
               </ul>
             </li>
             <li class="enumeration__item accordion__item">
               <div class="accordion__toggle">
-                <h3>Инженерно-геологические</h3>
+                <h3>Состав системы:</h3>
                 <div class="accordion-icon"></div>
               </div>
               <ul class="list accordion__content">
-                <li>Инженерно-геологическая съемка в масштабах 1:500 - 1:25000.</li>
-                <li>Проходка горных выработок с их опробованием, лабораторные исследования физико-механических свойств
-                  грунтов и химических свойств проб подземных вод</li>
-                <li>Изучение опасных геологических и инженерно-геологических процессов с разработкой рекомендаций по
-                  инженерной защите территории
+                <li>Сервер сбора информации о комплексах ФВФ;</li>
+                <li>Комплексы ФВФ;</li>
+                <li>Клиенты (подключение посредством браузера).
                 </li>
-                <li>Гидрогеологические исследования</li>
-                <li>Инженерно-геофизические исследования</li>
-                <li>Инженерно-геокриологические исследования</li>
-                <li>Сейсмологические и сейсмотектонические исследования территории, сейсмическое микрорайонирование</li>
-              </ul>
-            </li>
-            <li class="enumeration__item accordion__item">
-              <div class="accordion__toggle">
-                <h3>Инженерно-гидрометеорологические</h3>
-                <div class="accordion-icon"></div>
-              </div>
-              <ul class="list accordion__content">
-                <li>Метеорологические наблюдения и изучение гидрологического режима водных объектов</li>
-                <li>Изучение опасных гидрометеорологических процессов и явлений с расчетами их характеристик</li>
-                <li>Изучение русловых процессов водных объектов, деформаций и переработки берегов. Исследования ледового
-                  режима водных объектов</li>
-              </ul>
-            </li>
-            <li class="enumeration__item accordion__item">
-              <div class="accordion__toggle">
-                <h3>Обследование состояния грунтов основания зданий</h3>
-                <div class="accordion-icon"></div>
-              </div>
-              <ul class="list accordion__content">
-                <li>Создание опорных геодезических сетей</li>
               </ul>
             </li>
           </ul>
         </div>
-        <h2>Инженерные изыскания выполняются<br>
-          <span>высококвалифицированными</span><br>
-          и опытными специалистами
+        <h2>Ссылки на документацию</h2>
+        <div class="media-component">
+          <img src="@images/click.png">
+          <div class="media-component__list">
+            <div class="news-card">
+              <h3>Функционал курсор 19.11.2021</h3>
+              <p>Описание функциональных характеристик программного обеспечения</p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
+            <div class="news-card">
+              <h3>Инструкция по установке курсор</h3>
+              <p>Информация, необходимая для установки программного обеспечения</p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
+            <div class="news-card">
+              <h3>Инструкция пользователя курсор</h3>
+              <p>Информация, необходимая для эксплуатации программного обеспечения</p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
+            <div class="news-card">
+              <h3>Стоимость по курсор</h3>
+              <p>Информация о порядке определения стоимости программного обеспечения</p>
+              <a class="link link_green-arrow" href="#">подробнее</a>
+            </div>
+          </div>
+        </div>
+        <h2>
+          Интеллектуальная транспортная<br>система <span>«курсор»</span>
         </h2>
-        <div class="service-detail__swiper swiper-component swiper">
+        <div class="solution-detail__swiper swiper-component swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="@images/guys.png" alt="photo">
+              <img src="@images/camera.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/guys-on-ski.png" alt="photo">
+              <img src="@images/camera-map.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/guys.png" alt="photo">
+              <img src="@images/users.png" alt="photo">
             </div>
             <div class="swiper-slide">
-              <img src="@images/guys-on-ski.png" alt="photo">
+              <img src="@images/camera.png" alt="photo">
+            </div>
+            <div class="swiper-slide">
+              <img src="@images/camera-map.png" alt="photo">
+            </div>
+            <div class="swiper-slide">
+              <img src="@images/users.png" alt="photo">
             </div>
           </div>
           <div class="swiper-pagination"></div>
