--- a/src/html/pages/project-detail.html
+++ b/src/html/pages/project-detail.html
@@ -152,13 +152,13 @@
         </div>
         <div class="solutions-section__list">
           <div class="solution-card">
-            <img class="solution-card__bg" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png">
             <h3>Интеллектуальная транспортная система «Курсор»</h3>
             <p>Создать системы безопасности для котельных</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__bg" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png">
             <h3>Системы информационной безопасности</h3>
             <p>Компания Форт Диалог предлагает комплексные решения по защите автоматизированных систем предприятия.
               Каждое из таких решений представляет собой набор взаимодополняющих друг друга продуктов, обеспечивающих
@@ -166,13 +166,13 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__bg" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png">
             <h3>АСУ ТП</h3>
             <p>Информационное моделирование здания или информационная модель здания</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="solution-card">
-            <img class="solution-card__bg" src="@images/solution-bg.png">
+            <img class="solution-card__image" src="@images/solution-bg.png">
             <h3>Центры обработки данных</h3>
             <p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
               любой сложности</p>
@@ -193,7 +193,7 @@
       <div class="services-section__swiper swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide service-card">
-            <img class="service-card__bg" src="@images/service-bg.png">
+            <img class="service-card__image" src="@images/service-bg.png">
             <h3>Монтажные и пусконаладочные работы</h3>
             <p>Компания Форт Диалог предлагает комплексный подход к решению задач любой сложности на любом этапе проекта
               - от стадии формирования задачи, инженерных изысканий или проектирования до этапа поставок, монтажа и
@@ -201,13 +201,13 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__bg" src="@images/service-bg.png">
+            <img class="service-card__image" src="@images/service-bg.png">
             <h3>Bim</h3>
             <p>Информационное моделирование здания или информационная модель здания.</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__bg" src="@images/service-bg.png">
+            <img class="service-card__image" src="@images/service-bg.png">
             <h3>отдел проектной атрибуции (ОПД)</h3>
             <p>Отдел проектной дистрибуции (ОПД)  АО «Форт Диалог» выступает в качестве «Поставщика» по следующим видам
               продукции:
@@ -218,14 +218,14 @@
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__bg" src="@images/service-bg.png">
+            <img class="service-card__image" src="@images/service-bg.png">
             <h3>Инженерные изыскания</h3>
             <p>Данный вид исследований позволяет получить полный спектр данных о районе предполагаемой застройки, на
               основе которых, можно подготовить качественную проектную документацию в короткие сроки.</p>
             <a class="link link_green-arrow" href="#">подробнее</a>
           </div>
           <div class="swiper-slide service-card">
-            <img class="service-card__bg" src="@images/service-bg.png">
+            <img class="service-card__image" src="@images/service-bg.png">
             <h3>проектирование</h3>
             <p>АО «Форт Диалог» успешно выполняет проектирование не только отдельных систем, но комплексных проектов
               любой сложности, что дает заказчику возможность существенно сэкономить время и ресурсы.</p>
