--- a/src/html/pages/about-company.html
+++ b/src/html/pages/about-company.html
@@ -114,7 +114,7 @@
         </div>
       </div>
     </section>
-    <section class="projects-section">
+    <section class="projects-section projects-section_secondary">
       <div class="projects-section__swiper swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide project-card">
@@ -154,7 +154,7 @@
         <div class="swiper-pagination"></div>
       </div>
     </section>
-    <section class="career-section">
+    <section class="career-section career-section_secondary">
       <video autoplay muted loop src="@videos/career-bg.mp4"></video>
       <div class="container">
         <h2>ваша успешная карьера в fort dialog </h2>
