--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -7,14 +7,14 @@
 		<h3 style="margin-bottom: 40px;">Карта сайта</h3>
 		<ol>
 			<li><a href="/" class="link" target="_blank">Главная</a></li>
-			<li><a href="/projects" class="link" target="_blank">Проекты</a></li>
-			<li><a href="/project-detail" class="link" target="_blank">Детальная проекта</a></li>
-			<li><a href="/services" class="link" target="_blank">Услуги</a></li>
-			<li><a href="/services-detail" class="link" target="_blank">Детальная услуги</a></li>
-			<li><a href="/solutions" class="link" target="_blank">Решения</a></li>
-			<li><a href="/solutions-detail" class="link" target="_blank">Детальная решения</a></li>
-			<li><a href="/about-company" class="link" target="_blank">О компании</a></li>
-			<li><a href="/404" class="link" target="_blank">404</a></li>
+			<li><a href="/projects.html" class="link" target="_blank">Проекты</a></li>
+			<li><a href="/project-detail.html" class="link" target="_blank">Детальная проекта</a></li>
+			<li><a href="/services.html" class="link" target="_blank">Услуги</a></li>
+			<li><a href="/service-detail.html" class="link" target="_blank">Детальная услуги</a></li>
+			<li><a href="/solutions.html" class="link" target="_blank">Решения</a></li>
+			<li><a href="/solution-detail.html" class="link" target="_blank">Детальная решения</a></li>
+			<li><a href="/about-company.html" class="link" target="_blank">О компании</a></li>
+			<li><a href="/404.html" class="link" target="_blank">404</a></li>
 		</ol>
 	</div>
 
