add managment page

--- a/src/html/pages/career.html
+++ b/src/html/pages/career.html
@@ -47,34 +47,34 @@
     </section>
     <section class="career">
       <div class="container">
-        <div class="career__cards">
-          <div class="career__card">
+        <div class="employees">
+          <div class="employees__card">
             <img src="@images/oleg.png" alt="photo">
             <h3>Силантьев Олег</h3>
             <span>Начальник отдела АСУ ТП
               компании Форт Диалог</span>
-            <div class="career__history">
+            <div class="employees__history">
               <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
                 позицию системного администратора (TSS 2), через 2 года — стал тимлидом, еще через год — начал выполнять
                 роль Service Operations Manager, далее возглавлял направление сервисного обслуживания и технической
                 поддержки</p>
             </div>
           </div>
-          <div class="career__card">
+          <div class="employees__card">
             <img src="@images/timur.png" alt="photo">
             <h3>Сиразетдинов тимур</h3>
             <span>Эксперт по системам технической безопасности и связи компании «Форт Диалог»</span>
-            <div class="career__history">
+            <div class="employees__history">
               <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
                 позицию системного администратора (TSS 2)</p>
             </div>
           </div>
-          <div class="career__card">
+          <div class="employees__card">
             <img src="@images/oleg.png" alt="photo">
             <h3>Силантьев Олег</h3>
             <span>Начальник отдела АСУ ТП
               компании Форт Диалог</span>
-            <div class="career__history">
+            <div class="employees__history">
               <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
                 позицию системного администратора (TSS 2), через 2 года — стал тимлидом, еще через год — начал выполнять
                 роль Service Operations Manager, далее возглавлял направление сервисного обслуживания и технической
