--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -14,6 +14,7 @@
 			<li><a href="/solutions.html" class="link" target="_blank">Решения</a></li>
 			<li><a href="/solution-detail.html" class="link" target="_blank">Детальная решения</a></li>
 			<li><a href="/about-company.html" class="link" target="_blank">О компании</a></li>
+			<li><a href="/career.html" class="link" target="_blank">Карьера</a></li>
 			<li><a href="/404.html" class="link" target="_blank">404</a></li>
 		</ol>
 	</div>
