add documents page

--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -15,6 +15,8 @@
 			<li><a href="/solution-detail.html" class="link" target="_blank">Детальная решения</a></li>
 			<li><a href="/about-company.html" class="link" target="_blank">О компании</a></li>
 			<li><a href="/career.html" class="link" target="_blank">Карьера</a></li>
+			<li><a href="/documents.html" class="link" target="_blank">Лицензии и сертификаты</a></li>
+			<li><a href="/managment.html" class="link" target="_blank">Руководство</a></li>
 			<li><a href="/404.html" class="link" target="_blank">404</a></li>
 		</ol>
 	</div>
