add page massmedia

--- a/src/html/pages/media.html
+++ b/src/html/pages/media.html
@@ -171,6 +171,61 @@
         {href:'#', class: 'btn_secondary',children:'все мероприятия'})
       </div>
     </section>
+    <section class="massmedia-section">
+      <div class="container">
+        <h2>О нас в СМИ</h2>
+        <div class="massmedia-section__cards">
+          <div class="massmedia-card">
+            <img src="@images/rubezh.png">
+            <h3>RUБЕЖ и форт диалог</h3>
+            <p>Журнал RUБЕЖ опросил крупнейших системных интеграторов о правилах игры в муниципальных проектах
+              цифровизации и выяснил, какие платформы получили наиболее широкое распространение. Отвечает Тимур
+              Сиразетдинов, эксперт по системам технической безопасности и связи компании «Форт Диалог»</p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+          <div class="massmedia-card">
+            <img src="@images/rashka.png">
+            <h3>Мобильный кваториум</h3>
+            <p>Компания Форт Диалог поставила в Республику Чувашия мобильный кванториум в рамках регионального проекта
+              "Успех каждого ребенка" и нацпроекта "Образование"</p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+          <div class="massmedia-card">
+            <img src="@images/sta.png">
+            <h3>Внедрение системы АСУ ТП</h3>
+            <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
+              катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
+            </p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+          <div class="massmedia-card">
+            <img src="@images/alexey.png">
+            <h3>Совхоз Алексеевский</h3>
+            <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
+              теплицах совхоза "Алексеевский"</p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+
+          <div class="massmedia-card">
+            <img src="@images/sta.png">
+            <h3>Внедрение системы АСУ ТП</h3>
+            <p>Компания Форт Диалог создала на строящейся установке по производству силикагеля на Салаватском
+              катализаторном заводе системы автоматизации распределенной системы управления и противоаварийной защиты
+            </p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+          <div class="massmedia-card">
+            <img src="@images/alexey.png">
+            <h3>Совхоз Алексеевский</h3>
+            <p>Друзья, спешим поделиться нашим новым реализованным проектом - установкой ассимиляционного освещения в
+              теплицах совхоза "Алексеевский"</p>
+            <a class="link link_green-arrow" href="#">подробнее</a>
+          </div>
+        </div>
+        @@include('components/ui/_button-link.html',
+        {href:'#', class: 'btn_secondary',children:'больше сми'})
+      </div>
+    </section>
   </main>
   @@include('components/business/_footer.html')
 
