--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -19,6 +19,8 @@
 			<li><a href="/documents.html" class="link" target="_blank">Лицензии и сертификаты</a></li>
 			<li><a href="/managment.html" class="link" target="_blank">Руководство</a></li>
 			<li><a href="/news.html" class="link" target="_blank">Новости</a></li>
+			<li><a href="/events.html" class="link" target="_blank">Мероприятия</a></li>
+			<li><a href="/massmedia.html" class="link" target="_blank">О нас в СМИ</a></li>
 			<li><a href="/404.html" class="link" target="_blank">404</a></li>
 		</ol>
 	</div>
