--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -16,6 +16,7 @@
 			<li><a href="/about-company.html" class="link" target="_blank">О компании</a></li>
 			<li><a href="/career.html" class="link" target="_blank">Карьера</a></li>
 			<li><a href="/media.html" class="link" target="_blank">Медиацентр</a></li>
+			<li><a href="/media-detail.html" class="link" target="_blank">Детальная новости/мероприятия</a></li>
 			<li><a href="/documents.html" class="link" target="_blank">Лицензии и сертификаты</a></li>
 			<li><a href="/managment.html" class="link" target="_blank">Руководство</a></li>
 			<li><a href="/news.html" class="link" target="_blank">Новости</a></li>
