add page partners

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -41,7 +41,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="partners swiper">
+		<section class="partners-section">
 			<div class="partners__first swiper">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
