--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -19,6 +19,8 @@
 			<li><a href="/media-detail.html" class="link" target="_blank">Детальная новости/мероприятия</a></li>
 			<li><a href="/contacts.html" class="link" target="_blank">Контакты</a></li>
 			<li><a href="/documents.html" class="link" target="_blank">Лицензии и сертификаты</a></li>
+			<li><a href="/partners.html" class="link" target="_blank">Партнеры</a></li>
+			<li><a href="/partner-detail.html" class="link" target="_blank">Детальная партнер</a></li>
 			<li><a href="/managment.html" class="link" target="_blank">Руководство</a></li>
 			<li><a href="/news.html" class="link" target="_blank">Новости</a></li>
 			<li><a href="/events.html" class="link" target="_blank">Мероприятия</a></li>
