add partner-detail page

--- a/src/html/pages/partner-detail.html
+++ b/src/html/pages/partner-detail.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang='ru'>
-@@include('meta/_head.html', {title: 'Форт Диаолог | Партнеры'})
+@@include('meta/_head.html', {title: 'Форт Диаолог | Детальная партнеры'})
 
 <body>
   @@include('components/business/_header.html')
@@ -12,18 +12,33 @@
             <a href="/" class="link">Главная</a>
           </li>
           <li>
-            Партнеры
+            <a href="#" class="link">О компании</a>
+          </li>
+          <li>
+            <a href="#" class="link">Партнеры</a>
+          </li>
+          <li>
+            Dr.Web
           </li>
         </ul>
-        <h1>Интеллектуальная транспортная система «Курсор»</h1>
-        <form>
-          <input type="text">
-          <button type="submit"></button>
-        </form>
       </div>
     </section>
-
-
+    <section class="partner-detail">
+      <div class="container">
+        <div class="partner-detail__photo">
+          <img src="@images/drweb.png" alt="photo">
+        </div>
+        <h1 class="partner-detail__title">Dr.Web</h1>
+        <div class="partner-detail__content">
+          <p>Российский производитель антивирусных средств защиты информации. Продукты Dr.Web разрабатываются с 1992
+            года. Это один из первых антивирусов в мире.</p>
+          <p>Компания «Доктор Веб» — ключевой игрок на российском рынке программных средств обеспечения базовой
+            потребности бизнеса — безопасности информации</p>
+          <img src="@images/cert.png" alt="certificate">
+        </div>
+      </div>
+      </div>
+    </section>
     <section class="questions">
       <img src="@images/questions-bg.png"></img>
       <div class="container">
