--- a/src/html/pages/partners.html
+++ b/src/html/pages/partners.html
@@ -12,6 +12,9 @@
             <a href="/" class="link">Главная</a>
           </li>
           <li>
+            <a href="#" class="link">О компании</a>
+          </li>
+          <li>
             Партнеры
           </li>
         </ul>
