add privacy page

--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -26,6 +26,7 @@
 			<li><a href="/events.html" class="link" target="_blank">Мероприятия</a></li>
 			<li><a href="/massmedia.html" class="link" target="_blank">О нас в СМИ</a></li>
 			<li><a href="/404.html" class="link" target="_blank">404</a></li>
+			<li><a href="/privacy.html" class="link" target="_blank">Политика конфиденциаольности</a></li>
 		</ol>
 	</div>
 
