--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -22,6 +22,7 @@
 			<li><a href="/partners.html" class="link" target="_blank">Партнеры</a></li>
 			<li><a href="/partner-detail.html" class="link" target="_blank">Детальная партнер</a></li>
 			<li><a href="/managment.html" class="link" target="_blank">Руководство</a></li>
+			<li><a href="/history.html" class="link" target="_blank">35 лет</a></li>
 			<li><a href="/news.html" class="link" target="_blank">Новости</a></li>
 			<li><a href="/events.html" class="link" target="_blank">Мероприятия</a></li>
 			<li><a href="/massmedia.html" class="link" target="_blank">О нас в СМИ</a></li>
