--- a/src/html/pages/about-company.html
+++ b/src/html/pages/about-company.html
@@ -20,21 +20,25 @@
     </section>
     <section class="numbers">
       <div class="container">
-        <div class="numbers__item">
-          <div class="numbers__number">1178+</div>
-          <div class="numbers__description numbers__description_narrow">проектов по модернизации ИТ-инфраструктуры</div>
-        </div>
-        <div class="numbers__item">
-          <div class="numbers__number">235 +</div>
-          <div class="numbers__description">сертифицированных инженеров и разработчиков</div>
-        </div>
-        <div class="numbers__item numbers__item_large">
-          <div class="numbers__number numbers__number_large">1989</div>
-          <div class="numbers__description numbers__description_large">35 лет мы развиваем технологии в России и создаем
-            решения, которыми
-            пользуются миллионы. Одна из крупнейших российских региональных компаний, работающих в сфере системной
-            интеграции
-            <a href="#" class="link link_green-arrow">35 лет истории успеха</a>
+        <div class="numbers__wrapper">
+          <div class="numbers__item">
+            <div class="numbers__number">1178+</div>
+            <div class="numbers__description numbers__description_narrow">проектов по модернизации ИТ-инфраструктуры
+            </div>
+          </div>
+          <div class="numbers__item">
+            <div class="numbers__number">235 +</div>
+            <div class="numbers__description">сертифицированных инженеров и разработчиков</div>
+          </div>
+          <div class="numbers__item numbers__item_large">
+            <div class="numbers__number numbers__number_large">1989</div>
+            <div class="numbers__description numbers__description_large">35 лет мы развиваем технологии в России и
+              создаем
+              решения, которыми
+              пользуются миллионы. Одна из крупнейших российских региональных компаний, работающих в сфере системной
+              интеграции
+              <a href="#" class="link link_green-arrow">35 лет истории успеха</a>
+            </div>
           </div>
         </div>
       </div>
