--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -28,6 +28,7 @@
 			<li><a href="/massmedia.html" class="link" target="_blank">О нас в СМИ</a></li>
 			<li><a href="/404.html" class="link" target="_blank">404</a></li>
 			<li><a href="/privacy.html" class="link" target="_blank">Политика конфиденциаольности</a></li>
+			<li><a href="/success-page.html" class="link" target="_blank">Уведомление об успешной отправке формы</a></li>
 		</ol>
 	</div>
 
